infra/k8s/deployment-back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blagenda-back
  namespace: blagenda
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: blagenda-back
          image: diamondydev/blagenda-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
