infra/k8s/deployment-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blagenda-front
  namespace: blagenda
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: blagenda-front
          image: diamondydev/blagenda-front:3cfd965ce9c45582cc399eb62ddee8974bce903c
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
