infra/k8s/service-back.yml
apiVersion: v1
kind: Service
metadata:
  name: back
  namespace: blagenda
spec:
  selector:
    app: back
  ports:
    - port: 80
      targetPort: 3000
