infra/k8s/service-front.yml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: blagenda
spec:
  selector:
    app: front
  ports:
    - port: 80
      targetPort: 3000
