infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: blagenda
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - blagenda.diamondy.dev
      secretName: blagenda-tls
  rules:
    - host: blagenda.diamondy.dev
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: back
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
